# pydantic-toast

./: .gitignore  AGENTS.md  README.md  justfile  main.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
specs/001-external-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-external-storage/checklists/: requirements.md
specs/001-external-storage/contracts/: storage_backend.py
specs/002-sync-methods-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sync-methods-support/checklists/: requirements.md
specs/002-sync-methods-support/contracts/: storage_backend.py
specs/003-testcontainers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-testcontainers/checklists/: requirements.md
specs/004-type-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-type-adapter/checklists/: requirements.md
specs/004-type-adapter/contracts/: storage_backend.py
src/pydantic_toast/: __init__.py  base.py  exceptions.py  registry.py  type_adapter.py
src/pydantic_toast/backends/: __init__.py  base.py  postgresql.py  redis.py  s3.py
src/pydantic_toast/backends/sql/: create_index.sql  create_table.sql  select_model.sql  upsert_model.sql
tests/: conftest.py  test_base_model.py  test_postgresql.py  test_redis.py  test_registry.py  test_s3.py  test_type_adapter.py
