[project]
name = "pydantic-toast"
version = "0.1.0"
description = "External storage for Pydantic models - store data in PostgreSQL, Redis, or custom backends"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]
s3 = ["aiobotocore>=3.0.0"]
all = ["asyncpg>=0.29.0", "redis>=5.0.0", "aiobotocore>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "testcontainers[postgres,redis,localstack]>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_toast"]

[tool.hatch.build.targets.wheel.force-include]
"src/pydantic_toast/backends/sql" = "pydantic_toast/backends/sql"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG"]
ignore = ["S101", "A002", "ARG002"]  # Allow assert in tests, id parameter name, unused kwargs

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]  # Allow asserts and unused args in tests

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/pydantic_toast"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
